k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: allegro-service
  namespace: statex-apps
  labels:
    app: allegro-service
    managed-by: k8s-migration
  annotations:

spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - allegro.alfares.cz
      secretName: allegro-service-tls
  rules:
    - host: allegro.alfares.cz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: allegro-service
                port:
                  number: 3000
